--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -3,7 +3,7 @@
 .navbar {
   width: 100%;
   height: 90px;
-  background: #2d3748;
+  background: #24293a;
   border-bottom: 1px solid #e2e8f0;
   position: fixed;
   top: 0;
